feat: create auth register route (remove create user)
